--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
     color: seashell;
     background-color: black;
     opacity: 0.9;
+    box-sizing: border-box;
 }
 
 header {
@@ -27,3 +28,42 @@ header {
     padding: 10px;
 }
 
+.mission{
+    display: flex;
+    background-image: url("assets/img-mission-background.jpg");
+    background-position: center;
+    height: 700px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin:0 50px;
+}
+
+h2,h4{
+    background-color: black;
+    width: 100%;
+    text-align: center;
+    margin:0 -15px;
+    font-weight: bold;
+}
+
+.tea_of_month{
+    padding-top: 50px;
+    line-height: 2;
+}
+
+.tea_flex{
+    display: flex;
+    max-width: 1000px;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+       
+}
+
+.tea_flex img{
+    height: 200px;
+    width: 300px;
+    padding: 15px;
+}
